# tree-sitter-fasm

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  demo.fasm  go.mod  grammar.js  nvim.sh  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fasm.h  tree-sitter-fasm.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fasm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFasmTests/: TreeSitterFasmTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  data_directive.txt  empty.txt  format_directive.txt  section_directives.txt  test.asm
