[package]
name = "tree-sitter-fasm"
description = "tree-sitter parser for the FASM assembler."
version = "0.1.0"
authors = ["Suprit S Jahagirdar <supritsj05@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fasm"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/wassup05/tree-sitter-fasm.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
